--- a/treeni/part3-notes-backend/package.json
+++ b/treeni/part3-notes-backend/package.json
@@ -5,16 +5,19 @@
   "main": "index.js",
   "scripts": {
     "start": "node index.js",
-    "watch": "node_modules/.bin/nodemon index.js"
+    "watch": "node_modules/.bin/nodemon index.js",
+    "lint": "eslint ."
   },
   "author": "Matti Luukkainen",
   "license": "MIT",
   "dependencies": {
     "cors": "^2.8.5",
+    "dotenv": "^6.2.0",
     "express": "^4.16.2",
     "mongoose": "^5.4.4"
   },
   "devDependencies": {
+    "eslint": "^5.12.1",
     "nodemon": "^1.18.9"
   }
 }
