--- a/treeni/part3-notes-backend/package.json
+++ b/treeni/part3-notes-backend/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "start": "node index.js",
     "watch": "node_modules/.bin/nodemon index.js",
-    "lint": "eslint ."
+    "lint": "eslint .",
+    "test": "jest --verbose"
   },
   "author": "Matti Luukkainen",
   "license": "MIT",
@@ -18,6 +19,10 @@
   },
   "devDependencies": {
     "eslint": "^5.12.1",
+    "jest": "^24.0.0",
     "nodemon": "^1.18.9"
+  },
+  "jest": {
+    "testEnvironment": "node"
   }
 }
