jest added for testing + exercises to 4.6

--- a/Osa4/blogilista/package.json
+++ b/Osa4/blogilista/package.json
@@ -4,7 +4,7 @@
   "description": "Full Stack Open 2018 osan 4 tehtävä",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "jest --verbose",
     "start": "nodemon index.js --port 3003"
   },
   "repository": {
@@ -25,6 +25,7 @@
     "mongoose": "^5.4.7"
   },
   "devDependencies": {
+    "jest": "^24.0.0",
     "nodemon": "^1.18.9"
   }
 }
