--- a/Osa4/blogilista/package.json
+++ b/Osa4/blogilista/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "jest --verbose",
-    "start": "nodemon index.js --port 3003"
+    "start": "nodemon index.js --port 3003",
+    "lint": "eslint ."
   },
   "repository": {
     "type": "git",
@@ -25,7 +26,13 @@
     "mongoose": "^5.4.7"
   },
   "devDependencies": {
+    "cross-env": "^5.2.0",
+    "eslint": "^5.13.0",
     "jest": "^24.0.0",
-    "nodemon": "^1.18.9"
+    "nodemon": "^1.18.9",
+    "supertest": "^3.4.2"
+  },
+  "jest": {
+    "testEnvironment": "node"
   }
 }
