--- a/Osa4/blogilista/package.json
+++ b/Osa4/blogilista/package.json
@@ -30,6 +30,7 @@
     "eslint": "^5.13.0",
     "jest": "^24.0.0",
     "nodemon": "^1.18.9",
+    "standard": "^12.0.1",
     "supertest": "^3.4.2"
   },
   "jest": {
