--- a/treeni/part3-notes-backend/package.json
+++ b/treeni/part3-notes-backend/package.json
@@ -12,9 +12,11 @@
   "author": "Matti Luukkainen",
   "license": "MIT",
   "dependencies": {
+    "bcrypt": "^3.0.4",
     "cors": "^2.8.5",
     "dotenv": "^6.2.0",
     "express": "^4.16.2",
+    "jsonwebtoken": "^8.4.0",
     "mongoose": "^5.4.4"
   },
   "devDependencies": {
