--- a/Osa4/blogilista/package.json
+++ b/Osa4/blogilista/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "start": "cross-env NODE_ENV=production nodex index.js",
     "watch": "cross-env NODE_ENV=development nodemon index.js",
-    "test": "cross-env NODE_ENV=test jest --verbose && standard",
+    "test": "cross-env NODE_ENV=test jest --verbose",
     "lint": "eslint ."
   },
   "repository": {
@@ -20,6 +20,7 @@
   },
   "homepage": "https://github.com/janrom/full_stack_open_2018_tehtavat#readme",
   "dependencies": {
+    "bcrypt": "^3.0.4",
     "body-parser": "^1.18.3",
     "cors": "^2.8.5",
     "dotenv": "^6.2.0",
